syntax = "proto3";

package service;

option java_package = "org.example.server";
option java_multiple_files = true;

message NumberRequest{
  int32 number = 1;
}

message NumberResponse{
  int32 number = 1;
  string txId = 2;
}

service NumberService{
  rpc getNumber(NumberRequest) returns (NumberResponse);
}